# noHEIC

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
